--- a/public/styles.css
+++ b/public/styles.css
@@ -1,5 +1,5 @@
 body {
-    font-family: Arial, sans-serif;
+    font-family: "Montserrat", serif;
     background-color: #f4f4f4;
     margin: 0;
     padding: 0;
@@ -14,6 +14,13 @@ body {
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
 }
 
+.header-container {
+    display: flex;
+    justify-content: space-between;
+    align-items: center;
+    padding: 0 20px;
+}
+
 h1 {
     text-align: center;
 }
@@ -25,7 +32,9 @@ form {
     margin-bottom: 20px;
 }
 
-form input, form textarea, form button {
+form input,
+form textarea,
+form button {
     padding: 10px;
     font-size: 16px;
     border: 1px solid #ccc;
@@ -33,7 +42,7 @@ form input, form textarea, form button {
 }
 
 form button {
-    background-color: #007bff;
+    background-color: #2ab024;
     color: white;
     border: none;
     cursor: pointer;
@@ -52,9 +61,9 @@ form button:hover {
 
 .post {
     padding: 15px;
-    border: 1px solid #ccc;
+    border: 1px solid #000;
     border-radius: 5px;
-    background: #f9f9f9;
+    background: #fff;
 }
 
 .post h2 {
@@ -66,7 +75,7 @@ form button:hover {
 }
 
 .post button {
-    background-color: #ff4d4d;
+    background-color: #4d5fff;
     color: white;
     border: none;
     padding: 5px 10px;
@@ -74,10 +83,17 @@ form button:hover {
     cursor: pointer;
     transition: background-color 0.3s ease;
 }
-
-.post button:hover {
+.post button.post_delete{
     background-color: #cc0000;
 }
+
+.post button.post_delete:hover {
+    background-color: #e10202;
+}
+.post button:not(.post_delete):hover {
+    background-color: #6372fd;
+}
+
 header nav {
     display: flex;
     justify-content: flex-end;
@@ -96,3 +112,62 @@ header nav a:hover {
     color: #0056b3;
 }
 
+/* Header styles */
+header {
+    background-color: #333;
+    color: #fff;
+    padding: 20px 0;
+    text-align: center;
+}
+
+header .header-container h1 {
+    margin: 0;
+    font-size: 15px;
+}
+
+header nav ul {
+    list-style-type: none;
+    padding: 0;
+    margin: 10px 0 0;
+    display: flex;
+    justify-content: center;
+    gap: 15px;
+    font-size: 15px;
+}
+
+header nav ul li a {
+    color: #fff;
+    text-decoration: none;
+    font-weight: bold;
+}
+
+header nav ul li a:hover {
+    text-decoration: underline;
+}
+
+/* Footer styles */
+footer {
+    background-color: #333;
+    color: #fff;
+    padding: 20px 0;
+    text-align: center;
+}
+
+footer a {
+    color: #ffcc00;
+    text-decoration: none;
+}
+
+footer a:hover {
+    text-decoration: underline;
+}
+
+.form-row {
+    display: flex;
+    gap: 10px; /* Проміжок між елементами */
+    margin-bottom: 15px; /* Відступ знизу */
+}
+
+.form-row input {
+    flex: 1; 
+}
